# DTSS-BASIC

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN_comparative_validation.md  PROMPTS.md  README.md  SPEC_dartmouth_basic_v4.md  dbasic.py  dbasic2.py  pyproject.toml
.claude/: settings.json
tests/: test_dbasic.py
tools/: make_fork.py
